--- a/packages/layout/src/layout/LayoutPanelFooter.css
+++ b/packages/layout/src/layout/LayoutPanelFooter.css
@@ -1,13 +1,13 @@
-:where(.layout-panel-footer) {
+:where(.cui-layout-panel-footer) {
 	bottom: 0;
 	position: sticky;
 	z-index: 1;
 }
 
-:where(.layout-panel-footer):empty {
+:where(.cui-layout-panel-footer):empty {
 	display: none;
 }
 
-:where(.layout-panel-footer-spacer) {
+:where(.cui-layout-panel-footer-spacer) {
 	flex-grow: 1;
 }
