--- a/packages/layout/src/layout/LayoutPanelBody.css
+++ b/packages/layout/src/layout/LayoutPanelBody.css
@@ -1,25 +1,25 @@
-:where(.layout-panel-body) {
+:where(.cui-layout-panel-body) {
 	flex-basis: 100%;
 	max-width: var(--panel-max-width);
 	min-width: var(--panel-min-width, 0px);
 	overflow: auto;
 }
-:where(.layout-panel-body):empty {
+:where(.cui-layout-panel-body):empty {
 	display: none;
 }
 
 
-:where(.layout-panel-body.layout-panel-body-behavior-modal) {
+:where(.cui-layout-panel-body[data-layout-panel-body-behavior="modal"]) {
 	max-width: unset;
 }
 
-:where(.layout-panel-body) {
+:where(.cui-layout-panel-body) {
 	transition-property: transform, opacity;
 	transition-timing-function: ease-in;
 	transition-duration: var(--cui-transition-duration);
 }
 
-:where(.layout-panel-body):where(.layout-panel-body-behavior-overlay, .layout-panel-body-behavior-modal) {
+:where(.cui-layout-panel-body):where([data-layout-panel-body-behavior="overlay"], [data-layout-panel-body-behavior="modal"]) {
 	overscroll-behavior: contain;
 	overflow: hidden;
 }
