--- a/packages/layout/src/layout/LayoutPanelHeader.css
+++ b/packages/layout/src/layout/LayoutPanelHeader.css
@@ -1,8 +1,8 @@
-:where(.layout-panel-header) {
+:where(.cui-layout-panel-header) {
 	position: sticky;
 	top: 0;
 	z-index: 1;
 }
-:where(.layout-panel-header):empty {
+:where(.cui-layout-panel-header):empty {
 	display: none;
 }
