--- a/packages/layout/src/responsive-app-layout/ResponsiveAppLayout.css
+++ b/packages/layout/src/responsive-app-layout/ResponsiveAppLayout.css
@@ -1,6 +1,6 @@
 :where(
-	.responsive-app-layout-header,
-	.responsive-app-layout-footer,
+	.cui-responsive-app-layout-header,
+	.cui-responsive-app-layout-footer,
 ) {
 	left: 0;
 	max-width: 100vw;
@@ -12,41 +12,41 @@
 }
 
 :where(
-	.responsive-app-layout-header,
-	.responsive-app-layout-footer,
-) :where(a, button, input, select, .layout-slot) {
+	.cui-responsive-app-layout-header,
+	.cui-responsive-app-layout-footer,
+) :where(a, button, input, select, .cui-layout-slot) {
 	pointer-events: all;
 }
 
-:where(.responsive-app-layout-header) {
+:where(.cui-responsive-app-layout-header) {
 	top: 0;
 }
-:where(.responsive-app-layout-body) {
+:where(.cui-responsive-app-layout-body) {
 	flex: 1 1 100%;
 }
-:where(.responsive-app-layout-footer) {
+:where(.cui-responsive-app-layout-footer) {
 	bottom: 0;
 }
 
 :where(
-	.responsive-app-layout-header,
-	.responsive-app-layout-body,
-	.responsive-app-layout-footer,
+	.cui-responsive-app-layout-header,
+	.cui-responsive-app-layout-body,
+	.cui-responsive-app-layout-footer,
 ) {
 	display: flex;
 	flex-direction: row;
 }
 
 :where(
-	.responsive-app-layout-header-container,
-	.responsive-app-layout-body-container,
-	.responsive-app-layout-footer-container,
+	.cui-responsive-app-layout-header-container,
+	.cui-responsive-app-layout-body-container,
+	.cui-responsive-app-layout-footer-container,
 ) {
 	display: flex;
 	flex: 1 0 100%;
 	flex-direction: row;
 }
 
-:where(.responsive-app-layout-body-container) {
+:where(.cui-responsive-app-layout-body-container) {
 	justify-content: space-between;
 }
