fix(ui): Use as variable (Sass)

--- a/packages/ui/src/components/Dialog/DialogModal.sass
+++ b/packages/ui/src/components/Dialog/DialogModal.sass
@@ -61,11 +61,11 @@
 		max-height: calc(100vh - 2 * var(--cui-padding))
 
 	&.view-fit-content
-		max-width: calc($breakpoint-max-medium - 2 * var(--cui-padding))
+		max-width: calc(#{$breakpoint-max-medium} - 2 * var(--cui-padding))
 
 	&.view-wide
 		max-width: calc(100vw - 2 * var(--cui-padding))
-		width: calc($breakpoint-max-large - var(--cui-padding))
+		width: calc(#{$breakpoint-max-large} - var(--cui-padding))
 
 	&.view-expanded
 		height: calc(100vh - var(--cui-padding))
