--- a/packages/ui/src/components/Layout/LayoutChrome.css
+++ b/packages/ui/src/components/Layout/LayoutChrome.css
@@ -3,6 +3,7 @@
   align-items: stretch;
   color: var(--cui-color--medium);
   display: flex;
+	flex: 1;
   flex-direction: column;
   min-height: 100vh;
 }
