--- a/packages/ui/src/components/Layout/LayoutChrome.sass
+++ b/packages/ui/src/components/Layout/LayoutChrome.sass
@@ -121,6 +121,8 @@
 			background: linear-gradient(to right, var(--cui-background-color) 25%, var(--cui-background-color--below))
 			min-width: var(--layout-chrome-bar-width)
 			max-width: var(--layout-chrome-bar-width)
+		&-bar-header
+			min-height: var(--cui-content-offset-top, 0px)
 		&-bar-body
 			padding-left: env(safe-area-inset-left, 0em)
 		&-body
