--- a/packages/ui/src/components/Forms/Button/index.css
+++ b/packages/ui/src/components/Forms/Button/index.css
@@ -86,6 +86,8 @@
 	--cui-button-label-font-size: var(--cui-font-size-body);
 	--cui-button-height: var(--cui-control-height--large);
 	--cui-button-padding-horizontal: calc(var(--cui-gap) * 7 - var(--cui-control-border-width, 1px));
+	margin-bottom: calc(-1 / 2 * (var(--cui-control-height--large) - var(--cui-control-height)));
+	margin-top: calc(-1 / 2 * (var(--cui-control-height--large) - var(--cui-control-height)));
 }
 
 :where(.cui-button.view-block),
@@ -243,6 +245,7 @@
 	display: -webkit-box;
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
+	white-space: nowrap;
 }
 
 :where(.cui-button-list) {
