fix(ui): Fix height differences caused by Save buttons

--- a/packages/admin/src/styles/index.css
+++ b/packages/admin/src/styles/index.css
@@ -19,6 +19,7 @@
 @import "./parts/sortable";
 @import "./parts/tile";
 @import "./parts/tileList";
+@import "./parts/persistButton.css";
 @import "./parts/toolbar";
 @import "./libs/leaflet";
 
