--- a/packages/ui/src/components/Forms/Button/index.css
+++ b/packages/ui/src/components/Forms/Button/index.css
@@ -243,6 +243,7 @@
 	display: -webkit-box;
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
+	white-space: nowrap;
 }
 
 :where(.cui-button-list) {
