feat: Better default component base for routing
- Also improves detection of active sub-pages

--- a/packages/ui/src/components/index.css
+++ b/packages/ui/src/components/index.css
@@ -3,6 +3,7 @@
 
 /* Leaf components */
 @import "./Typography";
+@import "./Anchor";
 @import "./ContainerSpinner";
 @import "./ContentStatus";
 @import "./DevBar";
