--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -255,3 +255,12 @@
 	vertical-align: middle;
 	width: calc(1em * var(--scale));
 }
+
+:where(.dangerously-remove-native-focus-outline) {
+	outline: none;
+}
+
+:where(.dangerously-remove-native-focus-outline:focus-visible .native-focus-outline-handler) {
+	outline: 5px auto Highlight;
+	outline: 5px auto -webkit-focus-ring-color;
+}
