chore(ui): Move `StyleProvider` outside of Layout

--- a/packages/ui/src/components/index.css
+++ b/packages/ui/src/components/index.css
@@ -1,3 +1,7 @@
+/* Global */
+@import "./StyleProvider";
+
+/* Leaf components */
 @import "./Typography";
 @import "./ContainerSpinner";
 @import "./ContentStatus";
