fix: Wrap children in the `SpinnerContainer`
**[BUG]: `identityState.state === 'loading'` trashes whole tree of nodes below**

Instead of trashing the already rendered tree on refetch,
we now wrap the children in a spinning container.

This is more efficient and also might fix other issues:

- page might re-scroll to the top
- layout jumping around
- flash of disappearing content on refetch
- match use of `ContainerSpinner` with expectations (see below)

*Naming Issue:* The *container* in the component name is misleading

- `ContainerSpinner` was in fact an overlay, therefore it is being replaced with `SpinnerOverlay`
- It had no `children` prop which disallowed intended use as container and causing unintended recreation of children with conditional render

--- a/packages/ui/src/components/SpinnerContainer/index.css
+++ b/packages/ui/src/components/SpinnerContainer/index.css
@@ -1,4 +1,4 @@
-:where(.cui-containerSpinner) {
+:where(.cui-spinner-overlay) {
 	--cui-container-spinner-delay: 1000ms;
 	position: absolute;
 	top: 0;
@@ -13,7 +13,7 @@
 	z-index: 10;
 }
 
-:where(.cui-containerSpinner.cui-aether) {
+:where(.cui-spinner-overlay.cui-aether) {
 	animation-delay: var(--cui-container-spinner-delay);
 	animation-duration: var(--cui-transition-duration);
 	animation-fill-mode: both;
@@ -21,15 +21,15 @@
 	background: transparent;
 }
 
-:where(.cui-containerSpinner) {
+:where(.cui-spinner-overlay) {
 	font-size: 2.5em;
 }
 
-:where(.cui-containerSpinner.view-small) {
+:where(.cui-spinner-overlay.view-small) {
 	font-size: 1.5em;
 }
 
-:where(.cui-containerSpinner.view-large) {
+:where(.cui-spinner-overlay.view-large) {
 	font-size: 4em;
 }
 
