--- a/packages/ui/src/components/index.css
+++ b/packages/ui/src/components/index.css
@@ -36,6 +36,7 @@
 @import "./SeamlessDropdown";
 @import "./Section";
 @import "./SectionTabs";
+@import "./SpinnerContainer";
 @import "./Spacer";
 @import "./Stack";
 @import "./Table";
